--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "knex": "^0.12.7",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "request-promise": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
