--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "humps": "^2.0.0",
     "knex": "^0.12.7",
+    "pg": "^6.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request-promise": "^4.1.1"
@@ -15,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "knex": "knex"
   }
 }
