--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.15.3",
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "decode-google-map-polyline": "^1.0.1",
+    "dotenv": "^4.0.0",
     "humps": "^2.0.0",
     "knex": "^0.12.7",
+    "morgan": "^1.8.1",
     "pg": "^6.1.4",
+    "polyline-encoded": "0.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-google-maps": "^4.11.0",
     "request-promise": "^4.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & nodemon --watch server/ server/bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
