--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-google-maps": "^4.11.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "socket.io": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start & nodemon --watch server/ server/bin/www",
