--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "humps": "^2.0.0",
     "knex": "^0.12.7",
+    "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "pg": "^6.1.4",
     "polyline-encoded": "0.0.8",
