--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-google-maps": "^4.11.0",
+    "react-router-dom": "^4.0.0",
     "request-promise": "^4.1.1",
     "socket.io": "^1.7.3"
   },
