--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.15.3",
+    "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.17.1",
+    "boom": "^4.3.0",
     "cookie-parser": "^1.4.3",
     "decode-google-map-polyline": "^1.0.1",
     "dotenv": "^4.0.0",
+    "express-validation": "^1.0.2",
     "humps": "^2.0.0",
+    "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
     "mdi": "^1.8.36",
     "moment": "^2.17.1",
