--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "polyline-encoded": "0.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-geosuggest": "^2.1.0",
     "react-google-maps": "^4.11.0",
     "react-router-dom": "^4.0.0",
     "request-promise": "^4.1.1",
