--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "oba-clone",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "7.4.0"
+  },
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
